# NeneEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  NeneEngine.rc  README.md  THIRD_PARTY_NOTICES.txt  WinMain.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  format-check.yml
GameEngineArchitecture-Practice/: CMakeLists.txt  GameEngineArchitecture-Practice.cpp  GameEngineArchitecture-Practice.h
assets/Models/: Super_Nenechi_Base_Color.texture.json  momosuzu_nene_posed.mtl
assets/Models/momosuzu_nene_posed/: momosuzu_nene_posed.mtl
assets/Shaders/: textured_mesh.psh  textured_mesh.shader  textured_mesh.vsh
assets/config/: app.json  engine.json
assets/models/: spawn_manifest.json
assets/models/momosuzu_nene_posed/: LICENSE.txt  model.instance.json
assets/models/parappa_anime/: LICENSE.txt
assets/models/parappa_anime/PaRappa The Rapper/: frog.texture.json  model.instance.json
assets/scenes/: test_scene.config.json  test_scene.json
docs/LabTasks/: Lab-01.md
docs/reports/docx/: АИД ПР 1 (Власов Д.Н., Шабанов Т.О., J3300).docx  АИД ПР 2 (Власов Д.Н., Шабанов Т.О., J3300).docx  АИД ПР 3 (Власов Д.Н., Шабанов Т.О., J3300).docx
include/: Application.h  CustomLogger.h  DiligentDX12Adapter.h  GameStateInterface.h  GameStateMachine.h  GameTimer.h  IWindow.h  NeneEngineApp.h  NeneEngineTestApp.h  RenderAdapter.h  Win32Window.h  WindowInterface.h
include/App/: AppConfig.h  AppRuntimeConfigPolicy.h  AppStartupConfigService.h  DemoBootstrapRunner.h  GameStateMachine.h  NeneEngineApp.h
include/Core/: CustomLogger.h  Delegate.h  ExternalLibrarySmokeTest.h  GameTimer.h  PathResolver.h  Resource.h  ResourceManager.h
include/ECS/: Entity.h  EventBus.h  World.h
include/ECS/Components/: CameraComponent.h  CameraControllerComponent.h  ColliderComponent.h  HierarchyComponent.h  MeshRenderRuntimeComponent.h  MeshRenderer.h  MeshRendererComponent.h  MovementComponent.h  PrimitiveControlComponent.h  RigidbodyComponent.h  Tag.h  TagComponent.h  Transform.h  TransformComponent.h
include/ECS/Events/: CollisionEvent.h
include/ECS/Systems/: CameraControllerSystem.h  ISystem.h  MovementSystem.h  PrimitiveControlSystem.h  RenderSystem.h
include/Input/: IInputHandler.h  InputActions.h  InputDevice.h  InputManager.h  KeyCode.h  KeyCodeStrings.h
include/Platform/: IWindow.h
include/Platform/Windows32/: Windows32Window.h
include/RenderAdapters/: DiligentDX12Adapter.h  IRenderAdapter.h
include/Rendering/: MeshLoader.h  ModelInstanceConfig.h  ModelSpawnManifest.h  ModelSpawner.h  RenderResizeHandler.h  RenderRuntimeBinder.h  RenderTypes.h  ShaderLoader.h  TextureLoader.h
include/Scene/: SceneConfig.h  SceneSerializer.h  TestScene.h
include/States/: IGameState.h  MenuState.h  PauseState.h  PlayState.h
include/states/: MenuState.h  PauseState.h  PlayState.h
src/: Application.cpp  CMakeLists.txt  CustomLogger.cpp  DiligentDX12Adapter.cpp  EASTLAllocator.cpp  GameStateMachine.cpp  GameTimer.cpp  NeneEngineApp.cpp  NeneEngineApp.h  NeneEngineTestApp.cpp  Win32Window.cpp
src/App/: AppConfig.cpp  AppRuntimeConfigPolicy.cpp  AppStartupConfigService.cpp  CMakeLists.txt  DemoBootstrapRunner.cpp  GameStateMachine.cpp  NeneEngineApp.cpp
src/Core/: CMakeLists.txt  CustomLogger.cpp  EASTLAllocator.cpp  ExternalLibrarySmokeTest.cpp  GameTimer.cpp  PathResolver.cpp  ResourceManager.cpp
src/ECS/: CMakeLists.txt  PhysicsComponents.cpp  World.cpp
src/ECS/Components/: Transform.cpp
src/ECS/Systems/: CameraControllerSystem.cpp  MovementSystem.cpp  PrimitiveControlSystem.cpp  RenderSystem.cpp
src/Input/: CMakeLists.txt  InputDevice.cpp  InputManager.cpp  KeyCodeStrings.cpp
src/Platform/: CMakeLists.txt
src/Platform/Windows32/: Windows32Window.cpp
src/RenderAdapters/: CMakeLists.txt  DiligentDX12Adapter.cpp
src/Rendering/: CMakeLists.txt  MeshLoader.cpp  ModelInstanceConfig.cpp  ModelSpawnManifest.cpp  ModelSpawner.cpp  RenderResizeHandler.cpp  RenderRuntimeBinder.cpp  ShaderLoader.cpp  TextureLoader.cpp
src/Scene/: CMakeLists.txt  SceneConfig.cpp  SceneSerializer.cpp  TestScene.cpp
src/States/: CMakeLists.txt  MenuState.cpp  PauseState.cpp  PlayState.cpp
src/states/: MenuState.cpp  PauseState.cpp  PlayState.cpp
